[tool.poetry]
name = "my_rag1"
version = "0.1.0"
description = ""
authors = ["makenow <makenow90@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.5"
chromadb = "0.4.24"
notebook = "^7.2.1"
ipykernel = "^6.29.4"
torch = {version = "^2.3.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.18.1+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.3.1+cu118", source = "torch_cu118"}
langsmith = "^0.1.93"
pdfplumber = "^0.11.2"
langchain-teddynote = "^0.0.19"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-openai = "0.1.19"
langchain-core = "0.2.28"
langchain-huggingface = "^0.0.3"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"



[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
